# morse_code_project

lib/: CMakeLists.txt  blink_led.c  blink_led.h  devmem.c  translate_to_morse.c  translate_to_morse.h
src/: main.c
unity/: test.c
